<resources>
    <string name="app_name">VetClinic</string>

    <string name="title_home">Главная</string>
    <string name="title_veterinarians">Врачи</string>
    <string name="title_procedures">Услуги</string>
    <string name="title_account">Профиль</string>

    <string name="title_name_procedure">Название</string>
    <string name="title_price_procedure">Цена, ₽</string>

    <string name="title_welcome">Добро пожаловать!</string>
    <string name="title_login_btn">Войти</string>
    <string name="title_register_redirect">Ещё нет аккаунта? Регистрация</string>

    <string name="title_registration">Регистрация</string>
    <string name="title_register_btn">Создать аккаунт</string>
    <string name="title_login_redirect">Уже есть аккаунт? Авторизация</string>

    <string name="title_username">Логин</string>
    <string name="title_password">Пароль</string>
    <string name="title_confirm_password">Подтвердите пароль</string>
    <string name="error_username_empty">Введите имя пользователя</string>
    <string name="error_password_empty">Введите пароль</string>
    <string name="login_success">Успешный вход!</string>
    <string name="login_failed">Ошибка входа. Проверьте данные.</string>
    <string name="error_network">Ошибка подключения к сети.</string>

    <string name="title_name">Имя</string>
    <string name="title_surname">Фамилия</string>
    <string name="title_patronymic">Отчество</string>
    <string name="title_birthday">Дата рождения</string>
    <string name="title_email">Email</string>
    <string name="edit">Изменить</string>
    <string name="title_details_btn">Подробнее</string>
    <string name="coming_appointments">Записи на приемы</string>
    <string name="all_appointments">Все приемы</string>
    <string name="update_btn">Изменить</string>
    <string name="delete_btn">Удалить</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="schedule">Расписание</string>
    <string name="record_btn">Записаться\n</string>
    <string name="not_free_schedules">Нет свободных записей</string>
    <string name="create_schedule">"Вы хотите записаться: "</string>
    <string name="choose_btn">Выбрать</string>
    <string name="choose_animal">"Выберите питомца для записи: "</string>
    <string name="profile">Ваши данные</string>
    <string name="hint_surname">Введите фамилию</string>
    <string name="hint_name">Введите имя</string>
    <string name="hint_patronymic">Введите отчество(необязательно)</string>
    <string name="hint_birthday">Введите дату рождения</string>
    <string name="title_phone">Номер телефона</string>
    <string name="hint_phone">Введите номер телефона</string>
    <string name="hint_email">Введите email</string>
    <string name="hint_username">Введите логин</string>
    <string name="hint_password">Введите пароль</string>
    <string name="hint_animal_name">Введите кличку</string>
    <string name="hint_breed">Введите породу</string>
    <string name="save">Сохранить изменения</string>
    <string name="hint_confirm_password">Подтвердите пароль</string>
    <string name="title_fullname">ФИО</string>
    <string name="create_animal">Добавить питомца</string>
    <string name="update_account">Изменить данные</string>
    <string name="add_btn">Добавить</string>
    <string name="gender_male">М</string>
    <string name="gender_female">Ж</string>
    <string name="gender_another">-</string>
    <string name="title_create_animal">Добавление питомца</string>
    <string name="title_animal_name">Кличка</string>
    <string name="title_animalType">Вид животного</string>
    <string name="title_gender">Пол</string>
    <string name="title_breed">Порода</string>
    <string name="title_account_update">Изменение данных</string>
    <string name="title_animal_details">Подробнее о питомце</string>
    <string name="title_veterinarian_details">Подробнее о враче</string>
    <string name="title_create_schedule">Запись на прием</string>
    <string name="title_animal_update">Изменение данных о питомце</string>
    <string name="title_animal_delete">Удаление питомца</string>
    <string name="title_animalsList_isEmpty">У вас пока нет питомцев, для добавления перейдите в профиль</string>
    <string name="title_animal_create">Добавление питомца</string>
    <string name="title_confirm_delete">Вы уверены, что хотите удалить данного питомца?</string>
    <string name="update_photo_btn">Изменить фото</string>
    <string name="title_appointment_details">Подробнее о приеме</string>
    <string name="logout">Выйти</string>
    <string name="logout_confirmation_title">Подтвердите выход</string>
    <string name="logout_confirmation_message">Вы уверены, что хотите выйти?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>

</resources>