<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textSize="20sp"
                android:textColor="@color/purple1"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_fullname"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="4dp" />

            <TextView
                android:id="@+id/textViewFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="фио"
                android:textSize="16sp"
                android:layout_marginBottom="12dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_birthday"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="4dp" />

            <TextView
                android:id="@+id/textViewBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="birthday"
                android:textSize="16sp"
                android:layout_marginBottom="12dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_phone"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="4dp" />

            <TextView
                android:id="@+id/textViewPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="phone"
                android:textSize="16sp"
                android:layout_marginBottom="12dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_email"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="4dp" />

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="email"
                android:textSize="16sp"
                android:layout_marginBottom="12dp" />

            <Button
                android:id="@+id/buttonCreateAnimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_animal"
                android:layout_marginEnd="8dp"/>

            <Button
                android:id="@+id/buttonEditData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_account"/>

        </LinearLayout>
    </ScrollView>
</FrameLayout>
