<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstNameInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/firstNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_name"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastNameInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@id/firstNameInputLayout"
        app:layout_constraintStart_toStartOf="@id/firstNameInputLayout"
        app:layout_constraintTop_toBottomOf="@id/firstNameInputLayout">

        <EditText
            android:id="@+id/lastNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_surname"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/patronymicInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@id/lastNameInputLayout"
        app:layout_constraintStart_toStartOf="@id/lastNameInputLayout"
        app:layout_constraintTop_toBottomOf="@id/lastNameInputLayout">

        <EditText
            android:id="@+id/patronymicInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_patronymic"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/birthdayInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@id/patronymicInputLayout"
        app:layout_constraintStart_toStartOf="@id/patronymicInputLayout"
        app:layout_constraintTop_toBottomOf="@id/patronymicInputLayout">

        <EditText
            android:id="@+id/birthdayInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_birthday"
            android:focusable="false"
            android:clickable="true" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@id/birthdayInputLayout"
        app:layout_constraintStart_toStartOf="@id/birthdayInputLayout"
        app:layout_constraintTop_toBottomOf="@id/birthdayInputLayout">

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@id/emailInputLayout"
        app:layout_constraintStart_toStartOf="@id/emailInputLayout"
        app:layout_constraintTop_toBottomOf="@id/emailInputLayout">

        <EditText
            android:id="@+id/phoneInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_phone"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@id/phoneInputLayout"
        app:layout_constraintStart_toStartOf="@id/phoneInputLayout"
        app:layout_constraintTop_toBottomOf="@id/phoneInputLayout">

        <EditText
            android:id="@+id/loginInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_username"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Сохранить"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/loginInputLayout"
        app:layout_constraintStart_toStartOf="@id/loginInputLayout"
        app:layout_constraintTop_toBottomOf="@id/loginInputLayout" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/gray"
        android:text="Отменить"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/buttonSave"
        app:layout_constraintStart_toStartOf="@id/buttonSave"
        app:layout_constraintTop_toBottomOf="@id/buttonSave" />


</androidx.constraintlayout.widget.ConstraintLayout>
